--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,7 @@ nav:
   - TorrentGalaxy: torrent-galaxy.md
   - 1337x: 1337x-proxy-list.md
   - ExtraTorrent: extratorrent-proxy-list.md
-  - 123Movies: 123movies-proxy-list.md
+  - LimeTorrent: lime-torrent-proxy-list.md
 
 # Copyright
 copyright: Copyright &copy; 2016 - 2023 Calcium
